stylesheets/style.css
.ui-dialog.ui-widget.ui-widget-content.ui-corner-all.ui-front.ui-draggable.ui-resizable {
  border: 1px solid #2b507a;
  position: absolute;
  left: 450px;
}

nav {
  position: absolute;
  display: block;
  float:left;
  left: 80px;
  top: 70px;
}

.nav_buttons {
  font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
}

h5 {
  color: white !important;
  font-weight: bold !important;
  font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif !important;
}

#more{
  font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
  position: absolute;
  left: 100px;
  top: 160px;
}
#original{
  font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
  position: absolute;
  left: 94px;
  top: 160px;
}

#port_1 {
  height: 240px;
  position: absolute;
  top: 20px;
  left: 450px;
}
#ouac_screenshot{
  width: 308px;
  height: 210px;
}

#port_2 {
  height: 240px;
  position: absolute;
  top: 20px;
  left: 850px;
}
#cupcake_screenshot {
  width: 308px;
  height: 210px;
}

#port_3 {
  height: 240px;
  position: absolute;
  top: 20px;
  left: 450px;
}
#worldcup_screenshot {
  width: 308px;
  height: 210px;
}

#port_4 {
  height: 240px;
  position: absolute;
  top: 20px;
  left: 850px;
}
#simplechat_screenshot {
  width: 308px;
  height: 210px;
}


#bg_image {
  /*removed position absolute b/c it was hiding elements below and taking over site*/
  position: absolute;
  width: 100%;
  height: 100%;
  background: url('../images/wave2.jpg') no-repeat center;
  background-size: 100% 100%;
  background-origin: content-box;
  -webkit-filter:grayscale(0.2);
}

#name {
  font-family: 'Fauna One', serif;
  font-size: 44px;
  color: white;
  font-weight: bold;
  position: absolute;
  left: 30px;
  top: 20px;
}

.intro {
  width: 540px;
  height: 150px;
  padding-top: 20px;
  position: absolute;
  left: 520px;
  color: white;
  font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
  font-weight: bold;
}

#skills{
  width: 540px;
  height: 150px;
  color: #254763;
  position: absolute;
  left: 620px;
  top: 220px;
}

#personal_info{
  position: absolute;
  left: 520px;
  top: 550px;
}

#contact {
  position: absolute;
  bottom: 20px;
  left: 30px;
/*  text-align: center;*/
  color: white;
  font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
  font-weight: bold;

}
.icons {
  font-size: 1.7em;
  text-decoration: none;
  color: white;
}
.icons:hover {
  color: #91908e;
}

.ui-dialog-title {
  color: #2b507a;
}

/*.rocky_text {
  background-image: url("../images/rockywall.png");
  bottom: 0;
}*/

